K/kubernetes-keystone-webhook-cnejvBEI/kubernetes-keystone-webhook.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8sksauth
spec:
  ports:
    - name: http
      port: 80
    - name: https
      port: 443
  selector:
    app: ingress-api
---
apiVersion: v1
kind: Service
metadata:
  name: k8sksauth-api
spec:
  ports:
    - name: k8sksauth-pub
      port: 8443
  selector:
    release_group: release-name
    application: kubernetes-keystone-webhook
    component: api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-keystone-webhook
  annotations:
    openstackhelm.openstack.org/release_uuid: ""
  labels:
    release_group: release-name
    application: kubernetes-keystone-webhook
    component: api
spec:
  replicas: 1
  selector:
    matchLabels:
      release_group: release-name
      application: kubernetes-keystone-webhook
      component: api
  template:
    metadata:
      labels:
        release_group: release-name
        application: kubernetes-keystone-webhook
        component: api
      annotations:
        openstackhelm.openstack.org/release_uuid: ""
        configmap-bin-hash: 79688a0e91d135aba0db97b320a28bfb4d1bfa788cb5e0b1614cbd5fff19a241
        configmap-etc-hash: 3d6da369f89795c74b7bd48b23e67628dde709edac3625bb8b055d18c83d7538
        container.apparmor.security.beta.kubernetes.io/kubernetes-keystone-webhook: runtime/default
    spec:
      securityContext:
        runAsUser: 65534
      containers:
        - name: kubernetes-keystone-webhook
          image: docker.io/k8scloudprovider/k8s-keystone-auth:v1.19.0
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                "": NET_RAW
          command:
            - /tmp/start.sh
          readinessProbe:
            tcpSocket:
              port: 8443
            initialDelaySeconds: 15
            periodSeconds: 10
          ports:
            - name: k8sksauth-pub
              containerPort: 8443
          volumeMounts:
            - name: pod-tmp
              mountPath: /tmp
            - name: etc-kubernetes-keystone-webhook
              mountPath: /etc/kubernetes-keystone-webhook
            - name: key-kubernetes-keystone-webhook
              mountPath: /opt/kubernetes-keystone-webhook/pki/tls.crt
              subPath: tls.crt
              readOnly: true
            - name: key-kubernetes-keystone-webhook
              mountPath: /opt/kubernetes-keystone-webhook/pki/tls.key
              subPath: tls.key
              readOnly: true
            - name: kubernetes-keystone-webhook-etc
              mountPath: /etc/kubernetes-keystone-webhook/policy.json
              subPath: policy.json
              readOnly: true
            - name: kubernetes-keystone-webhook-bin
              mountPath: /tmp/start.sh
              subPath: start.sh
              readOnly: true
      volumes:
        - name: pod-tmp
          emptyDir: {}
        - name: etc-kubernetes-keystone-webhook
          emptyDir: {}
        - name: key-kubernetes-keystone-webhook
          secret:
            secretName: kubernetes-keystone-webhook-certs
            defaultMode: 292
        - name: kubernetes-keystone-webhook-etc
          configMap:
            name: kubernetes-keystone-webhook-etc
            defaultMode: 292
        - name: kubernetes-keystone-webhook-bin
          configMap:
            name: kubernetes-keystone-webhook-bin
            defaultMode: 365
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: k8sksauth
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/secure-backends: "true"
spec:
  rules:
    - host: k8sksauth
      http:
        paths:
          - path: /
            backend:
              serviceName: k8sksauth-api
              servicePort: k8sksauth-pub
    - host: k8sksauth.default
      http:
        paths:
          - path: /
            backend:
              serviceName: k8sksauth-api
              servicePort: k8sksauth-pub
    - host: k8sksauth.default.svc.cluster.local
      http:
        paths:
          - path: /
            backend:
              serviceName: k8sksauth-api
              servicePort: k8sksauth-pub
---
apiVersion: v1
kind: Pod
metadata:
  name: release-name-test
  annotations:
    helm.sh/hook: test-success
spec:
  serviceAccountName: release-name-test
  nodeSelector:
    openstack-control-plane: enabled
  restartPolicy: Never
  containers:
    - name: release-name-kubernetes-keystone-webhook-test
      image: docker.io/openstackhelm/heat:newton-ubuntu_xenial
      imagePullPolicy: IfNotPresent
      command:
        - /tmp/kubernetes-keystone-webhook-test.sh
      volumeMounts:
        - name: pod-tmp
          mountPath: /tmp
        - name: kubernetes-keystone-webhook-bin
          mountPath: /tmp/kubernetes-keystone-webhook-test.sh
          subPath: kubernetes-keystone-webhook-test.sh
          readOnly: true
  volumes:
    - name: pod-tmp
      emptyDir: {}
    - name: kubernetes-keystone-webhook-bin
      configMap:
        name: kubernetes-keystone-webhook-bin
        defaultMode: 365
